fixed some bugs with photos on iphone

--- a/app/assets/stylesheets/theme-elements.css
+++ b/app/assets/stylesheets/theme-elements.css
@@ -1626,7 +1626,7 @@ cite > span {
 .testimonial .bq-author .author-img {
   display: block;
   position: absolute;
-  left: -100px;
+  right: 10px;
   top: 0;
 }
 .testimonial .bq-author .author-img > img {
